
* Theory headers: the new header syntax for Isar theories is

  theory <name>
  imports <theory1> ... <theoryN>
  uses <file1> ... <fileM>
  begin

where the 'uses' part is optional.  The previous syntax

  theory <name> = <theory1> + ... + <theoryN>:

will disappear in the next release.  Use isatool fixheaders to convert
existing theory files.  Note that there is no change in ancient
non-Isar theories.

* Theory loader: parent theories can now also be referred to via
relative and absolute paths.

* Improved version of thms_containing searches for a list of criteria
instead of a list of constants. Known criteria are: intro, elim, dest,
name:string, simp:term, and any term. Criteria can be preceded by '-'
to select theorems that do not match. Intro, elim, dest select
theorems that match the current goal, name:s selects theorems whose
fully qualified name contain s, and simp:term selects all
simplification rules whose lhs match term.  Any other term is
interpreted as pattern and selects all theorems matching the
pattern. Available in ProofGeneral under 'ProofGeneral -> Find
Theorems' or C-c C-f.  Example:

  C-c C-f (100) "(_::nat) + _ + _" intro -name:"HOL."

prints the last 100 theorems matching the pattern "(_::nat) + _ + _",
matching the current goal as introduction rule and not having "HOL."
in their name (i.e. not being defined in theory HOL).


*** Document preparation ***

* Commands 'display_drafts' and 'print_drafts' perform simple output
of raw sources.  Only those symbols that do not require additional
LaTeX packages (depending on comments in isabellesym.sty) are
displayed properly, everything else is left verbatim.  isatool display
and isatool print are used as front ends (these are subject to the
DVI/PDF_VIEWER and PRINT_COMMAND settings, respectively).

* Command tags control specific markup of certain regions of text,
notably folding and hiding.  Predefined tags include "theory" (for
theory begin and end), "proof" for proof commands, and "ML" for